@@ -3,6 +3,7 @@ ver 0.16.7 (2011/??/??)
   - httpd: fix excessive buffering
   - openal: force 16 bit playback, as 8 bit doesn't work
   - osx: remove sleep call from render callback
+  - osx: clear render buffer when there's not enough data
 * fix moving after current song
 
 
